<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ue.smarttimetable.AddCourseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_course_name"
        android:id="@+id/textViewCourseName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCourseName"
        android:layout_below="@+id/textViewCourseName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_course_start_time"
        android:id="@+id/textViewCourseStartTime"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/editTextCourseName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_course_finish_time"
        android:id="@+id/textViewCourseFinishTime"
        android:textStyle="bold"
        android:layout_below="@+id/spinnerCourseStartTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/imgButtonCourseInfoSave"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/imgButtonDescription"
        android:background="#3eff30" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/imgButtonCourseDelete"
        android:contentDescription="@string/imgButtonDescription"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ff3535" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/spinnerCourseStartTime"
        android:layout_below="@+id/textViewCourseStartTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextCourseName"
        android:layout_alignEnd="@+id/editTextCourseName" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/spinnerCourseFinishTime"
        android:layout_below="@+id/textViewCourseFinishTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spinnerCourseStartTime"
        android:layout_alignEnd="@+id/spinnerCourseStartTime" />
</RelativeLayout>
